--- a/src/components/MyStatefulComponent.css
+++ b/src/components/MyStatefulComponent.css
@@ -1,3 +1,9 @@
+.my-stateful-component {
+    text-align: center;
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .myTextarea {
     width: 500px;
     height: 200px;
